questions and answers and beginning code

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Code Quiz</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-  
+  <div class="startcontainer">
+    <h1>Coding Quiz Challenge</h1>
+    <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds. 
+    </p>
+    <button class="startbtn">Start Quiz</button>  
+  </div>
+  <div class="questioncontainer">
+    <h3 class="timer">30</h3>
+    <h3 class="score">5
+    
+    </h3>
+    <h2 class="question">Question</h2>
+    <div class="answerlist"></div>
+    <button class="nextBtn">Next</button>
+  </div>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
