added timer, variables, 5 functions

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </div>
   <div class="questionContainer">
     <div class="top"><button class="highScores">View High Scores</button>
-    <h3 class="timer">Timer: <span class ="seconds">30</span></h3>
+    <h3 class="timer"></h3>
     </div>
   
-    <h3 class="score">5
+    <h3 class="score">
     
     </h3>
     <h2 class="question">Question</h2>
