--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <button class="answer2 answerButton"></button>
       <button class="answer3 answerButton"></button>
       <button class="answer4 answerButton"></button>
+      <h2 class="judgment"></h2>
     </div>
     
   </div>
