renamed answer1-4 to choice1-4

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </h3>
     <h2 class="question">Question</h2>
     <div class="answerList">
-      <button class="answer1 answerButton"></button>
-      <button class="answer2 answerButton"></button>
-      <button class="answer3 answerButton"></button>
-      <button class="answer4 answerButton"></button>
+      <button class="choice1 answerButton"></button>
+      <button class="choice2 answerButton"></button>
+      <button class="choice3 answerButton"></button>
+      <button class="choice4 answerButton"></button>
       <h2 class="judgment"></h2>
     </div>
     
