nextQuestion moved to within checkAnswer, added disappearing answers, timer checks out Ok

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="top"><button class="highScores">View High Scores</button>
     <h3 class="timer"></h3>
     </div>
-  
-    <h3 class="score">
+      <h1 class=finished></h1>
+      <h3 class="score">
     
     </h3>
     <h2 class="question">Question</h2>
