changed calling of allDone function

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
     <h3 class="timer"></h3>
     </div>
       <h1 class=finished></h1>
-      <h3 class="score">
-    
-    </h3>
-    <h2 class="question">Question</h2>
+      <h3 class="score"></h3>
+    </div>
+   <h2 class="question"></h2>
     <div class="answerList">
       <button class="choice1 answerButton"></button>
       <button class="choice2 answerButton"></button>
