added input and submit if score is above zero on All done page, created array to append info to

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       <button class="choice4 answerButton"></button>
       <h2 class="judgment"></h2>
     </div>
+ <!--   <div> -->
+ <!--     <form action=""> -->
+      <input type="text" for="who" class="initials"> 
+      <button type="submit" class="submitInitials answerButton" id="who">SUBMIT</button> 
+ <!--     </form>-->
+ <!--   </div> -->
     
   </div>
   <script src="./assets/js/script.js"></script>
