attempting to put text before input

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
  <!--   <div> -->
  <!--     <form action=""> -->
-      <input type="text" for="who" class="initials"> 
+      <input type="text" for="who" class="initials" name="enterInitials"> 
       <button type="submit" class="submitInitials answerButton" id="who">SUBMIT</button> 
  <!--     </form>-->
  <!--   </div> -->
