deleted insertAdjacentHTML and used label tag instead

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
  <!--   <div> -->
  <!--     <form action=""> -->
+      <label class=textBeforeInput for="who">Enter Initials:</label>
       <input type="text" for="who" class="initials" name="enterInitials"> 
       <button type="submit" class="submitInitials answerButton" id="who">SUBMIT</button> 
  <!--     </form>-->
