--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
  <!--     </form>-->
  <!--   </div> -->
     
-  </div>
+    </div>
+  
+    <div>
+      <h1 class="displayHighscores">Highscores</h1>
+    </div>
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
