--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
   
     <div>
       <h1 class="displayHighscores">Highscores</h1>
+      <ol class="highScoreList">
+
+      </ol>
     </div>
   <script src="./assets/js/script.js"></script>
 </body>
