added function retrieveScores, added styles

--- a/index.html
+++ b/index.html
@@ -31,19 +31,20 @@
     </div>
  <!--   <div> -->
  <!--     <form action=""> -->
+   <div class="submission">
       <label class="textBeforeInput" for="who">Enter Initials:</label>
       <input type="text" for="who" class="initials" name="enterInitials"> 
       <button type="submit" class="submitInitials answerButton" id="who">SUBMIT</button>
+    </div>
       <button class="refresh2 answerButton">Go Back</button> 
  <!--     </form>-->
  <!--   </div> -->
     
     </div>
   
-    <div>
+    <div class="centerLeft">
       <h1 class="displayHighscores">Highscores</h1>
       <ol class="highScoreList">
-
       </ol>
       <button class="refresh answerButton">Go Back</button>
       <button class="clearScores answerButton">Clear Highscores</button>
